# vust

./: .gitignore  Cargo.toml  README.md
src/: build.rs  cli.rs  config.rs  dev.rs  lib.rs  main.rs  new.rs  templates.rs
src/templates/: .env.tera  App.vue.tera  Cargo.toml.tera  Vust.toml.tera  main.rs.tera  package.json.tera  vite.config.ts.tera
