[package]
name = "vust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
tera = "2.0.0"
tokio = { version = "1.52", features = ["rt", "process", "signal", "macros"] }
toml = "1.1.2"
